// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/app/ui/Button/Native.js Render: props: { onPress } 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    onPress={[MockFunction]}
    text="dummyText"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "accent": false,
      "disabled": false,
      "icon": null,
      "onLongPress": null,
      "onPress": [MockFunction],
      "primary": false,
      "raised": false,
      "style": Object {},
      "testID": null,
      "text": "dummyText",
      "upperCase": true,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "accent": false,
        "disabled": false,
        "icon": null,
        "onLongPress": null,
        "onPress": [MockFunction],
        "primary": false,
        "raised": false,
        "style": Object {},
        "testID": null,
        "text": "dummyText",
        "upperCase": true,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`src/app/ui/Button/Native.js Render: props: { primary } 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    primary={true}
    text="dummyText"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "accent": false,
      "disabled": false,
      "icon": null,
      "onLongPress": null,
      "onPress": [Function],
      "primary": true,
      "raised": false,
      "style": Object {},
      "testID": null,
      "text": "dummyText",
      "upperCase": true,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "accent": false,
        "disabled": false,
        "icon": null,
        "onLongPress": null,
        "onPress": [Function],
        "primary": true,
        "raised": false,
        "style": Object {},
        "testID": null,
        "text": "dummyText",
        "upperCase": true,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`src/app/ui/Button/Native.js Render: props: { raised } 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    raised={true}
    text="dummyText"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "accent": false,
      "disabled": false,
      "icon": null,
      "onLongPress": null,
      "onPress": [Function],
      "primary": false,
      "raised": true,
      "style": Object {},
      "testID": null,
      "text": "dummyText",
      "upperCase": true,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "accent": false,
        "disabled": false,
        "icon": null,
        "onLongPress": null,
        "onPress": [Function],
        "primary": false,
        "raised": true,
        "style": Object {},
        "testID": null,
        "text": "dummyText",
        "upperCase": true,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`src/app/ui/Button/Native.js Render: props: { text } 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    text="dummyText"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "accent": false,
      "disabled": false,
      "icon": null,
      "onLongPress": null,
      "onPress": [Function],
      "primary": false,
      "raised": false,
      "style": Object {},
      "testID": null,
      "text": "dummyText",
      "upperCase": true,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "accent": false,
        "disabled": false,
        "icon": null,
        "onLongPress": null,
        "onPress": [Function],
        "primary": false,
        "raised": false,
        "style": Object {},
        "testID": null,
        "text": "dummyText",
        "upperCase": true,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
